[gd_scene load_steps=36 format=4 uid="uid://bjlb842jvvq0k"]

[ext_resource type="Script" uid="uid://ckji0el187dht" path="res://Scripts/level_select.gd" id="1_6aqvj"]
[ext_resource type="Texture2D" uid="uid://daocnama176b2" path="res://Sprites/Tile.png" id="3_31xks"]
[ext_resource type="Texture2D" uid="uid://dxnoeao04xwyf" path="res://Sprites/Tile_brown_.png" id="4_403c5"]
[ext_resource type="Texture2D" uid="uid://dlgbpysuafk0b" path="res://Sprites/Verworfen/wall-new.png" id="5_ywfc5"]
[ext_resource type="Texture2D" uid="uid://c651rcsia4yvj" path="res://Sprites/wall-sprites-4-corners.png" id="6_ai7k8"]
[ext_resource type="Texture2D" uid="uid://d0gndbeyxhfii" path="res://Sprites/grass-floor.png" id="7_aivvh"]
[ext_resource type="FontFile" uid="uid://d3id6ewnchky" path="res://Fonts/GrapeSoda.ttf" id="8_212me"]
[ext_resource type="Theme" uid="uid://i7fixmxgctx7" path="res://Sprites/MenuSprites/Button.tres" id="9_d7vdv"]
[ext_resource type="Texture2D" uid="uid://c078bffof3yta" path="res://Sprites/ScreenShots/lvl10.png" id="10_6aqvj"]
[ext_resource type="Texture2D" uid="uid://0o6mhfoic4yu" path="res://Sprites/ScreenShots/lvl1.png" id="10_h3e5b"]
[ext_resource type="Script" uid="uid://bld4747e6bxrc" path="res://Scripts/menu_button.gd" id="10_sl6uc"]
[ext_resource type="Texture2D" uid="uid://buc71108df6hf" path="res://Sprites/ScreenShots/lvl2.png" id="11_7qm35"]
[ext_resource type="Texture2D" uid="uid://wfbwlhwpsoe8" path="res://Sprites/ScreenShots/lvl3.png" id="12_woyun"]
[ext_resource type="Texture2D" uid="uid://cbn3utk3ut1s7" path="res://Sprites/ScreenShots/lvl4.png" id="13_ho1re"]
[ext_resource type="Texture2D" uid="uid://c6thvpb8yi4tj" path="res://Sprites/ScreenShots/lvl5.png" id="14_gra6x"]
[ext_resource type="Texture2D" uid="uid://dpwtjiplip8kd" path="res://Sprites/ScreenShots/lvl6.png" id="15_7vdvl"]
[ext_resource type="Texture2D" uid="uid://dej8o3atobn7n" path="res://Sprites/ScreenShots/lvl7.png" id="16_a3n8b"]
[ext_resource type="Texture2D" uid="uid://b5awbje32ckt8" path="res://Sprites/ScreenShots/lvl8.png" id="17_fphvl"]
[ext_resource type="Texture2D" uid="uid://ou3xgtnpdcjp" path="res://Sprites/ScreenShots/lvl9.png" id="18_xsmqa"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_japxf"]
texture = ExtResource("3_31xks")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1ffvo"]
texture = ExtResource("4_403c5")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vglai"]
texture = ExtResource("5_ywfc5")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k8nru"]
texture = ExtResource("6_ai7k8")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:3/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nvxm5"]
texture = ExtResource("7_aivvh")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_cqlev"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_japxf")
sources/1 = SubResource("TileSetAtlasSource_1ffvo")
sources/4 = SubResource("TileSetAtlasSource_vglai")
sources/6 = SubResource("TileSetAtlasSource_k8nru")
sources/8 = SubResource("TileSetAtlasSource_nvxm5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y3omd"]
texture = ExtResource("10_h3e5b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ot0e4"]
texture = ExtResource("11_7qm35")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bjjtt"]
texture = ExtResource("12_woyun")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n5dxd"]
texture = ExtResource("13_ho1re")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4a1fg"]
texture = ExtResource("14_gra6x")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dcjyr"]
texture = ExtResource("15_7vdvl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6or0m"]
texture = ExtResource("16_a3n8b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xgi3s"]
texture = ExtResource("17_fphvl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u01vx"]
texture = ExtResource("18_xsmqa")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ne220"]
texture = ExtResource("10_6aqvj")

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6aqvj")

[node name="Background_Lvl1" type="TileMap" parent="."]
tile_set = SubResource("TileSet_cqlev")
format = 2

[node name="ground" type="TileMapLayer" parent="Background_Lvl1"]
use_parent_material = true
position = Vector2(0, 256)
tile_map_data = PackedByteArray("AAAJAP3/CAAAAAEAAAAIAP3/CAACAAEAAAAHAP3/CAABAAEAAAAGAP3/CAAAAAEAAAAFAP3/CAABAAIAAAAEAP3/CAABAAEAAAADAP3/CAAAAAEAAAACAP3/CAACAAEAAAABAP3/CAABAAEAAAABAP7/CAABAAIAAAACAP7/CAACAAIAAAADAP7/CAAAAAIAAAAEAP7/CAABAAIAAAAFAP7/CAAAAAAAAAAGAP7/CAACAAEAAAAHAP7/CAABAAIAAAAIAP7/CAACAAIAAAAJAP7/CAAAAAIAAAAJAP//CAACAAAAAAAIAP//CAAAAAAAAAAHAP//CAAAAAAAAAAGAP//CAACAAAAAAAFAP//CAABAAAAAAAEAP//CAAAAAAAAAADAP//CAACAAAAAAACAP//CAAAAAAAAAABAP//CAAAAAAAAAABAAAACAAAAAEAAAACAAAACAABAAEAAAADAAAACAACAAEAAAAEAAAACAAAAAEAAAAFAAAACAABAAEAAAAGAAAACAABAAIAAAAHAAAACAAAAAEAAAAIAAAACAABAAEAAAAJAAAACAACAAEAAAAJAAEACAACAAIAAAAIAAEACAABAAIAAAAHAAEACAAAAAIAAAAGAAEACAAAAAAAAAAFAAEACAABAAIAAAAEAAEACAABAAIAAAADAAEACAACAAIAAAACAAEACAABAAIAAAABAAEACAAAAAIAAAABAAIACAABAAAAAAACAAIACAAAAAAAAAADAAIACAABAAAAAAAEAAIACAACAAAAAAAFAAIACAAAAAAAAAAGAAIACAABAAAAAAAHAAIACAACAAAAAAAIAAIACAAAAAAAAAAJAAIACAABAAAAAAAJAAMACAABAAEAAAAIAAMACAAAAAEAAAAHAAMACAACAAEAAAAGAAMACAABAAEAAAAFAAMACAAAAAEAAAAEAAMACAACAAEAAAADAAMACAABAAEAAAACAAMACAAAAAEAAAABAAMACAABAAEAAAABAAQACAABAAIAAAACAAQACAAAAAIAAAADAAQACAABAAIAAAAEAAQACAACAAIAAAAFAAQACAABAAIAAAAGAAQACAABAAIAAAAHAAQACAAAAAAAAAAIAAQACAABAAIAAAAJAAQACAABAAIAAAAJAAUACAAAAAEAAAAIAAUACAACAAEAAAAHAAUACAABAAEAAAAGAAUACAAAAAEAAAAFAAUACAABAAIAAAAEAAUACAABAAEAAAADAAUACAAAAAEAAAACAAUACAACAAEAAAABAAUACAABAAEAAAAAAPz/CAAAAAAAAAAAAP3/CAAAAAEAAAAAAP7/CAAAAAIAAAAAAP//CAACAAAAAAAAAAAACAACAAEAAAAAAAEACAACAAIAAAAAAAIACAAAAAAAAAAAAAMACAAAAAEAAAAAAAUACAAAAAEAAAAAAAYACAAAAAIAAAABAAYACAABAAIAAAAAAAQACAAAAAIAAAACAAYACAACAAIAAAADAAYACAAAAAIAAAAEAAYACAABAAIAAAAFAAYACAACAAIAAAAGAAYACAAAAAIAAAAHAAYACAABAAIAAAAIAAYACAACAAIAAAAJAAYACAAAAAIAAAAKAAYACAABAAIAAAAKAAUACAABAAEAAAAKAAQACAACAAIAAAAKAAMACAACAAEAAAAKAAIACAACAAAAAAAKAAEACAACAAIAAAAKAAAACAACAAEAAAAKAP//CAACAAAAAAAKAP7/CAABAAIAAAAKAP3/CAABAAEAAAAKAPz/CAABAAAAAAAJAPz/CAAAAAAAAAAIAPz/CAACAAAAAAAHAPz/CAABAAAAAAAGAPz/CAAAAAAAAAAFAPz/CAACAAAAAAAEAPz/CAABAAAAAAADAPz/CAAAAAAAAAACAPz/CAACAAAAAAABAPz/CAABAAAAAAA=")
tile_set = SubResource("TileSet_cqlev")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background_Lvl2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_cqlev")
format = 2

[node name="wall" type="TileMapLayer" parent="Background_Lvl2"]
use_parent_material = true
position = Vector2(0, 256)
tile_map_data = PackedByteArray("AAAAAAYABgABAAQAAAACAAYABgABAAQAAAAEAAYABgABAAQAAAAGAAYABgABAAQAAAAIAAYABgABAAQAAAAKAAYABgABAAQAAAABAAYABgADAAQAAAADAAYABgADAAQAAAAFAAYABgADAAQAAAAHAAYABgADAAQAAAAJAAYABgADAAQAAAABAPz/BgABAAQAADADAPz/BgABAAQAADAFAPz/BgABAAQAADAHAPz/BgABAAQAADAJAPz/BgABAAQAADAAAPz/BgADAAQAADACAPz/BgADAAQAADAEAPz/BgADAAQAADAGAPz/BgADAAQAADAIAPz/BgADAAQAADAKAPz/BgADAAQAADA=")
tile_set = SubResource("TileSet_cqlev")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -114.0
offset_right = 258.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Level1" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Level1"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_y3omd")

[node name="Level2" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Level2"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ot0e4")

[node name="Level3" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Level3"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bjjtt")

[node name="Level4" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Level4"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_n5dxd")

[node name="Level5" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Level5"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4a1fg")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Level6" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2/Level6"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dcjyr")

[node name="Level7" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2/Level7"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6or0m")

[node name="Level8" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2/Level8"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xgi3s")

[node name="level9" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2/level9"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_u01vx")

[node name="Level10" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("9_d7vdv")
script = ExtResource("10_sl6uc")

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer2/Level10"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ne220")

[node name="Back" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme = ExtResource("9_d7vdv")
text = "Back"
script = ExtResource("10_sl6uc")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 128.0
offset_right = 240.0
offset_bottom = 208.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_212me")
theme_override_font_sizes/font_size = 80
text = "Select a Level"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/level9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Level10" to="." method="_on_level_10_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_exit_pressed"]
